Stef's advise version

--- a/index.html
+++ b/index.html
@@ -163,31 +163,30 @@
 
           <div class="clearfix">
             <p>
-              
+              With four years of extensive experience in deep learning and a master's degree in computer science, 
+              I am confident in my abilities to contribute to the growth and success of your company. 
+              Throughout my career, I have gained comprehensive expertise in various aspects of deep learning, 
+              including advanced algorithms, neural networks, and machine learning techniques. 
+              I have successfully applied these skills in developing innovative software solutions that have improved efficiency and performance for previous employers.
             </p>
             <p>
-              I'm Gary, a four-year-deep-learning-experience software engineer with a master's degree in computer science. 
-              I came from Taiwan and immigrated to Socal 2 years ago. The experiences of two different places make me full of kindness, passion, and stress resistance.
+              Throughout my academic and professional journey, I have consistently maintained a deep passion for learning and research. 
+              This drive led me to actively participate in laboratory projects centered around the development of advanced robotics technologies. 
+              In these projects, I had the privilege of being part of a team that designed and constructed various cutting-edge robotic systems, 
+              including kid-size humanoid robots, adult-size humanoid robots, 7-joint manipulators, and 360-degree moving wheel robots. 
+              My expertise in programming languages such as Python, TensorFlow, and PyTorch has enabled me to develop sophisticated software solutions that drive the performance and efficiency of robotic systems. 
             </p>
             <p>
-              Before I came to Socal, I worked at Mindtronic AI which provides computer vision solutions for customers. 
-              Like pigeon identification systems, ADAS(advanced driver assistance systems), FCW(forward collision warning systems), and so on...... 
-            </p>
-            <p>
+              At Mindtronic AI in Taipei we provide computer vision solutions for customers. 
+              Like pigeon identification systems, ADAS(advanced driver assistance systems), FCW(forward collision warning systems), and so on... 
               In this company, I handled the implementation of products and analyzed data collected by simulators. 
               Including writing the controller for digital signals for the driving simulator, training, and evaluating the neural network, 
               and Maintaining the data labeling server cvat which build in C++.
             </p>
             <p>
-              I always keep my passion for learning and doing research since I'd researched in the laboratory. 
-              Our laboratory building our own kid-size humanoid robot, adult-size humanoid robot, 7 joint manipulators, 
-              and 360-degree moving wheel robot. We used these robots to join a bunch of national competitions like 
-              ARC(Amazon Robotic Challenge), WRS(World Robot Summit), FIRA RobotWorld Cup, and Pichkathon and these are just only the competitions that I have joined.
-            </p>
-            <p>
-              After these years of research in the laboratory. I have not only the skill of coding but also a lens for project development and the ability to work in a team. 
-              Software engineering for me is a process. It is not just a work coding in front of the computer. 
-              It's a journey that has to keep following up the knowledge and exploring the world. So that we can bring the scenes in our dreams into reality with these skills. 
+              In conclusion, my approach to software engineering encompasses a holistic view of project development, a strong emphasis on teamwork, 
+              and a commitment to personal growth and exploration. I am confident that my combination of technical expertise, project management skills, 
+              and passion for continuous learning will make me a valuable asset to your organization.
             </p>
 
 
