--- a/projects/index.html
+++ b/projects/index.html
@@ -163,7 +163,7 @@
 </figure>
 
         <div class="card-body">
-          <h3 class="card-title text-lowercase">Driving simulator</h3>
+          <h3 class="card-title">Driving Simulator</h3>
           <p class="card-text">Built a control system to simulate the driving.</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
@@ -189,7 +189,7 @@
 </figure>
 
         <div class="card-body">
-          <h3 class="card-title text-lowercase">Model buliding robot</h3>
+          <h3 class="card-title">Model Buliding Robot</h3>
           <p class="card-text">A manipulator to build the model was randomly placed on the table.</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
@@ -214,7 +214,7 @@
         
         </figure>
         <div class="card-body">
-          <h3 class="card-title text-lowercase">Fake data genorator</h3>
+          <h3 class="card-title">Fake Data Genorator</h3>
           <p class="card-text">Create the data with 3D and 2D bounding boxes by using scripts in unreal engine</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
@@ -247,7 +247,7 @@
 </figure>
 
         <div class="card-body">
-          <h3 class="card-title text-lowercase">Surface estimation algorithm</h3>
+          <h3 class="card-title">Surface Estimation Algorithm</h3>
           <p class="card-text">An algorithm that estimates the suface of the object by point cloud information. </p>
           <div class="row ml-1 mr-1 p-0">
           </div>
@@ -275,7 +275,7 @@
         
         </figure>
         <div class="card-body">
-          <h3 class="card-title text-lowercase">Sandwich detector</h3>
+          <h3 class="card-title">Sandwich Detector</h3>
           <p class="card-text">Based on yoloV3 convolutional neural network to detect the sandwiches on the workspace.</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
@@ -302,7 +302,7 @@
 </figure>
 
         <div class="card-body">
-          <h3 class="card-title text-lowercase">HSV segmantation algorithm</h3>
+          <h3 class="card-title">HSV Segmantation Algorithm</h3>
           <p class="card-text">Implemented the segmentation method by HSV color feature.</p>
           <div class="row ml-1 mr-1 p-0">
           </div>
