--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
               <!-- About -->
               <li class="nav-item active">
-                <a class="nav-link" href="/">about<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">About<span class="sr-only">(current)</span></a>
               </li>
               
               <!-- Blog -->
@@ -86,13 +86,13 @@
                 <a class="nav-link" href="/publications/">publications</a>
               </li> -->
               <li class="nav-item ">
-                <a class="nav-link" href="/projects/">projects</a>
+                <a class="nav-link" href="/projects/">Projects</a>
               </li>
               <!-- <li class="nav-item ">
                 <a class="nav-link" href="/repositories/">repositories</a>
               </li> -->
               <li class="nav-item ">
-                <a class="nav-link" href="/cv/">cv</a>
+                <a class="nav-link" href="/cv/">CV</a>
               </li>
               <!-- <li class="nav-item ">
                 <a class="nav-link" href="/teaching/">teaching</a>
