--- a/index.html
+++ b/index.html
@@ -318,9 +318,7 @@
             <div class="social">
               <div class="contact-icons">
                 <a href="mailto:gary4119@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
-                <!-- <a href="/feed.xml" title="RSS Feed"><i class="fas fa-rss-square"></i></a> -->
-            
-
+                <a href="https://www.linkedin.com/in/wukai-kao-8079a8227/" title="LinkedIn" rel="external nofollow noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
               </div>
 
               <!-- <div class="contact-note">
