Update the description of about page

--- a/index.html
+++ b/index.html
@@ -162,33 +162,20 @@
           </div>
 
           <div class="clearfix">
-            <p>
-              With four years of extensive experience in deep learning and a master's degree in computer science, 
-              I am confident in my abilities to contribute to the growth and success of your company. 
-              Throughout my career, I have gained comprehensive expertise in various aspects of deep learning, 
+            <P>
+              Hi, I’m Gary, a software engineer with four years of extensive experience in deep learning 
+              and a master's degree in electrical and computer engineering. Throughout my career, 
+              I have gained comprehensive expertise in various aspects of deep learning, 
               including advanced algorithms, neural networks, and machine learning techniques. 
-              I have successfully applied these skills in developing innovative software solutions that have improved efficiency and performance for previous employers.
-            </p>
-            <p>
-              Throughout my academic and professional journey, I have consistently maintained a deep passion for learning and research. 
-              This drive led me to actively participate in laboratory projects centered around the development of advanced robotics technologies. 
-              In these projects, I had the privilege of being part of a team that designed and constructed various cutting-edge robotic systems, 
-              including kid-size humanoid robots, adult-size humanoid robots, 7-joint manipulators, and 360-degree moving wheel robots. 
-              My expertise in programming languages such as Python, TensorFlow, and PyTorch has enabled me to develop sophisticated software solutions that drive the performance and efficiency of robotic systems. 
-            </p>
-            <p>
-              At Mindtronic AI in Taipei we provide computer vision solutions for customers. 
-              Like pigeon identification systems, ADAS(advanced driver assistance systems), FCW(forward collision warning systems), and so on... 
-              In this company, I handled the implementation of products and analyzed data collected by simulators. 
-              Including writing the controller for digital signals for the driving simulator, training, and evaluating the neural network, 
-              and Maintaining the data labeling server cvat which build in C++.
-            </p>
-            <p>
-              In conclusion, my approach to software engineering encompasses a holistic view of project development, a strong emphasis on teamwork, 
-              and a commitment to personal growth and exploration. I am confident that my combination of technical expertise, project management skills, 
-              and passion for continuous learning will make me a valuable asset to your organization.
-            </p>
-
+              My approach to software engineering encompasses a holistic view of project development, 
+              a strong emphasis on teamwork, and a commitment to personal growth and exploration.
+            </P>
+            <P>
+              I’m currently looking for new opportunities as a software engineer with not only focus on AI and machine learning but also data science. 
+              Please take a look at my CV to get a more in depth look on my education, achievements, and experience.
+               If any of it interests you, feel free to get in touch with me through any of the contact information 
+               I have provided! 
+            </P>
 
             <!-- <p>Write your biography here. Tell the world about yourself. Link to your favorite <a href="http://reddit.com" rel="external nofollow noopener" target="_blank">subreddit</a>. You can put a picture in, too. The code is already in, just name your picture <code class="language-plaintext highlighter-rouge">prof_pic.jpg</code> and put it in the <code class="language-plaintext highlighter-rouge">img/</code> folder.</p>
 
