(Temp)Little adjust and build Driving Simulator page.

--- a/projects/index.html
+++ b/projects/index.html
@@ -86,7 +86,7 @@
                 <a class="nav-link" href="/publications/">publications</a>
               </li> -->
               <li class="nav-item active">
-                <a class="nav-link" href="/projects/">Projects<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/projects/">Projects</a>
               </li>
               <!-- <li class="nav-item ">
                 <a class="nav-link" href="/repositories/">repositories</a>
@@ -148,7 +148,7 @@
 <!-- _includes/projects.html -->
 <div class="grid-sizer"></div>
 <div class="grid-item">
-  <!-- <a href="/projects/1_project/"> -->
+  <a href="/projects/1_project/">
       <div class="card hoverable">
 <figure>
 
