--- a/cv/index.html
+++ b/cv/index.html
@@ -93,7 +93,7 @@
                 <a class="nav-link" href="/repositories/">repositories</a>
               </li> -->
               <li class="nav-item active">
-                <a class="nav-link" href="/cv/">CV<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/cv/">CV</a>
               </li>
               <!-- <li class="nav-item ">
                 <a class="nav-link" href="/teaching/">teaching</a>
