--- a/projects/3_project/index.html
+++ b/projects/3_project/index.html
@@ -4,7 +4,7 @@
   <!-- Head -->
   <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="refresh" content="3; url=/al-folio/">    <!-- Metadata, OpenGraph and Schema.org -->
+<meta http-equiv="refresh" content="3; url=/">    <!-- Metadata, OpenGraph and Schema.org -->
     
 
     <!-- Standard metadata -->
